# ai-robo-advisor

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  docker-run.sh  pull_request_template.md  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh  test-workflow.sh
.github/: copilot-instruction.md  copilot-instructions.md  pull_request_template.md
.github/workflows/: README.md  auto-close-duplicates.yml  bug-reproduction-instructions.yml  ci.yml  greetings.yml  tests.yml  weekly-issue-summary.yml  welcome.yml
docker/: .env.docker.example  Dockerfile  README.md  docker-compose.yml  docker-helper.sh  validate-setup.sh
src/: __init__.py  display.py  main.py  metrics.py
src/data/: models.py
src/graph/: state.py
src/llm/: api.py  models.py
src/nodes/: portfolios_agent.py
src/nodes/analyst_agents/: alignment.py  analysis_workflow.py  diversification.py  fees.py  performance.py
src/nodes/investment_agents/: goal_based.py
src/tools/: polygon_api.py  yf_data_provider.py
src/utils/: alphavantage.py  analysis_data.py  check_performance.py  display.py  investor_profile.py  metrics.py  questionnaires.py
tests/: conftest.py  test_analysis_data_simple.py  test_analyst_workflow.py  test_display_simple.py  test_error_handling.py  test_llm.py  test_llm_providers.py  test_metrics_error_handling.py  test_models.py  test_nodes.py  test_partial_data_handling.py  test_performance_integration.py  test_polygon_wrapper.py  test_questionnaires.py  test_tools.py  test_utils.py  test_workflow.py
